# cute

./: .clippy.toml  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUTE.md  CUTE_ENGINEERING.md  Cargo.toml  FAQ.md  SECURITY.md  about.toml  deny.toml  skills-lock.json
.claude/: settings.local.json
.github/workflows/: ci.yml  create_release.yml
app/: Cargo.toml  build.rs
app/DockTilePlugin/: README.md
app/examples/: generate_default_settings.rs
app/src/: app_menus.rs  app_state.rs  changelog_model.rs  channel.rs  coding_panel_enablement_state.rs  crash_recovery.rs  cute_managed_paths_watcher.rs  debounce.rs  diff_panel.rs  features.rs  file_explorer.rs  font_fallback.rs  git.rs  gpu_state.rs  input_classifier.rs  interval_timer.rs  keyboard.rs  keyboard_tests.rs  lib.rs  linear.rs  menu_tests.rs  network.rs  palette.rs  preview_config_migration.rs  preview_config_migration_tests.rs  profiling.rs  resource_limits.rs  root_view.rs  system.rs  throttle.rs  tips_stub.rs  window_settings.rs
crates/ai/: Cargo.toml
crates/api/: Cargo.toml
crates/app-installation-detection/: Cargo.toml
crates/asset_cache/: Cargo.toml
crates/asset_macro/: Cargo.toml
crates/command-signatures-v2/: build.rs
crates/computer_use/: Cargo.toml
crates/computer_use/src/linux/wayland/: mod.rs
crates/computer_use/src/linux/x11/: mod.rs  mouse.rs
crates/computer_use/src/mac/: mod.rs  mouse.rs
crates/computer_use/src/windows/: keyboard.rs  mod.rs
crates/cute_assets/: Cargo.toml
crates/cute_cli/: Cargo.toml  build.rs
crates/cute_files/: Cargo.toml
crates/cute_files/src/: lib.rs  lib_tests.rs
crates/cute_js/: Cargo.toml
crates/cute_js/src/convert/: mod.rs
crates/cute_js/src/convert/native/: mod.rs  util.rs
crates/cute_js/src/js_function/: mod.rs  native.rs
crates/cute_ripgrep/: Cargo.toml
crates/cute_ripgrep/examples/: test_search.rs
crates/cute_ripgrep/src/: lib.rs  search.rs
crates/cute_terminal/: Cargo.toml
crates/cute_terminal/src/model/: ESCAPE_SEQUENCES.md  escape_sequences.rs  escape_sequences_tests.rs  indexing.rs  mode.rs  mouse.rs
crates/cute_terminal/src/model/ansi/: control_sequence_parameters.rs
crates/cute_terminal/src/model/escape_sequences/: kitty_keyboard_protocol.rs
crates/cute_terminal/src/model/grid/: cell.rs  cell_tests.rs  dimensions.rs  row.rs
crates/cute_terminal/src/shell/: mod.rs
crates/cuteui/: Cargo.toml  build.rs
crates/cuteui/examples/animated-gradient-text/: main.rs  root_view.rs
crates/cuteui/examples/animated_images/: main.rs  root_view.rs
crates/cuteui/examples/autotracking/: main.rs  root_view.rs
crates/cuteui/examples/blur/: main.rs  root_view.rs
crates/cuteui/examples/draggable/: main.rs  root_view.rs
crates/cuteui/examples/example-black-background-box/: main.rs  root_view.rs
crates/cuteui/examples/flex/: root_view.rs
crates/cuteui/examples/flex-expand/: root_view.rs
crates/cuteui/examples/formatted-text/: main.rs  root_view.rs
crates/cuteui/examples/frame-capture-test/: main.rs  root_view.rs
crates/cuteui/examples/image/: main.rs  root_view.rs
crates/cuteui/examples/list/: root_view.rs
crates/cuteui/examples/manual-scrolling/: root_view.rs
crates/cuteui/examples/percentage/: main.rs  root_view.rs
crates/cuteui/examples/resizable/: root_view.rs
crates/cuteui/examples/scrolling/: root_view.rs
crates/cuteui/examples/segmented-control/: main.rs  root_view.rs
crates/cuteui/examples/selectable/: main.rs  root_view.rs
crates/cuteui/examples/shadows/: main.rs  root_view.rs
crates/cuteui/examples/slider/: root_view.rs
crates/cuteui/examples/table-sample/: main.rs  root_view.rs
crates/cuteui/examples/typed_actions/: main.rs  root_view.rs
crates/cuteui/src/: lib.rs
crates/cuteui/src/fonts/: font_kit.rs  mod.rs
crates/cuteui/src/platform/: app.rs  mod.rs
crates/cuteui/src/platform/headless/: app.rs  windowing.rs
crates/cuteui/src/platform/linux/: mod.rs
crates/cuteui/src/platform/mac/: app.rs  clipboard.rs  clipboard_tests.rs  delegate.rs  event.rs  fonts.rs  keycode.rs  menus.rs  menus_tests.rs  notification.rs  text_layout.rs  utils.rs  window.rs
crates/cuteui/src/platform/mac/objc/notifications/: README.md
crates/cuteui/src/platform/mac/rendering/: renderer.rs
crates/cuteui/src/platform/mac/rendering/metal/: frame_capture.rs  renderer.rs  renderer_manager.rs
crates/cuteui/src/platform/mac/rendering/wgpu/: mod.rs
crates/cuteui/src/platform/wasm/: hidden_input.rs  mod.rs
crates/cuteui/src/rendering/: mod.rs
crates/cuteui/src/rendering/wgpu/: renderer.rs  resources.rs
crates/cuteui/src/rendering/wgpu/renderer/: glyph.rs  image.rs  rect.rs
crates/cuteui/src/windowing/: mod.rs
crates/cuteui/src/windowing/winit/: app.rs  fonts.rs  window.rs
crates/cuteui/src/windowing/winit/delegate/: global_hotkey.rs
crates/cuteui/src/windowing/winit/event_loop/: key_events.rs  mod.rs
crates/cuteui/src/windowing/winit/fonts/: font_handle.rs
crates/cuteui/src/windowing/winit/window/: windows_wm.rs
crates/languages/: Cargo.toml
crates/languages/grammars/: README.md
crates/languages/src/: lib.rs  lib_tests.rs
crates/repo_metadata/: Cargo.toml
crates/repo_metadata/src/: entry.rs  file_tree_store.rs  file_tree_store_tests.rs  file_tree_update.rs  file_tree_update_tests.rs  lib.rs  local_model.rs  local_model_tests.rs  remote_model.rs  repositories.rs  repositories_tests.rs  repository.rs  repository_identifier.rs  repository_tests.rs  telemetry.rs  watcher.rs  watcher_tests.rs  wrapper_model.rs
crates/repo_metadata/src/file_tree_store/: file_tree_state.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  macros.rs  macros_tests.rs  manager.rs  mod_tests.rs  schema.rs
crates/simple_logger/: Cargo.toml
crates/simple_logger/src/: lib.rs  manager.rs  manager_tests.rs
crates/syntax_tree/: Cargo.toml
crates/syntax_tree/src/: lib.rs
crates/syntax_tree/src/queries/: highlight_query.rs  indent_query.rs  indent_query_tests.rs
crates/warpui_extras/: Cargo.toml
crates/watcher/: Cargo.toml
crates/watcher/src/: home_watcher.rs  lib.rs
(+484 files in other folders)
