[package]
name = "cute_js"
authors = ["Cute Team <dev@cute.dev>"]
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
cfg-if.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rquickjs.workspace = true

[features]
test-util = []
