[package]
name = "cute_ripgrep"
authors = ["Cute Team <dev@cute.dev>"]
version = "0.1.0"
edition = "2021"
description = "Thin wrapper around ripgrep for usage by Cute CLI"
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
grep = "0.4.1"
ignore = "0.4.20"
instant.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
string-offset.workspace = true
cute_cli.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-process.workspace = true
command.workspace = true
futures.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(unix)'.dependencies]
nix.workspace = true
