[package]
name = "languages"
edition = "2021"
authors = ["Cute Team <dev@cute.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
rust-embed.workspace = true
arborium.workspace = true
lazy_static.workspace = true
cute_editor = { path = "../editor" }
cute_util.workspace = true
