[package]
name = "repo_metadata"
authors = ["Cute Team <dev@cute.dev>"]
version = "0.1.0"
edition = "2021"
description = "Repository metadata utilities for Cute"
publish.workspace = true
license.workspace = true

[features]
local_fs = []
test-util = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dunce.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
itertools.workspace = true
cuteui.workspace = true
cute_core.workspace = true
cute_util.workspace = true
ignore = "0.4.23"
once_cell.workspace = true
log.workspace = true
futures.workspace = true
tempfile.workspace = true
cfg-if = "1.0"
dirs.workspace = true
futures-lite.workspace = true
strum_macros.workspace = true
strum.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
notify-debouncer-full.workspace = true
async-fs.workspace = true
watcher.workspace = true

[build-dependencies]
anyhow.workspace = true

[dev-dependencies]
env_logger.workspace = true
futures = "0.3"
virtual-fs.workspace = true
cuteui = { workspace = true, features = ["test-util"] }
