[package]
name = "syntax_tree"
version = "0.1.0"
edition = "2021"
authors = ["Cute Team <dev@cute.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
rangemap.workspace = true
arborium.workspace = true
cuteui.workspace = true
cute_editor.workspace = true
languages.workspace = true
futures.workspace = true
futures-lite.workspace = true
parking_lot.workspace = true
log.workspace = true
string-offset.workspace = true
streaming-iterator = "0.1.9"
cute_util.workspace = true

[dev-dependencies]
cute_editor = { workspace = true, features = ["test-util"] }
cuteui = { workspace = true, features = ["test-util"] }
